Ensure white carousel text appears on mobile when it drops beneath the carousel
Fixes DD 71427 396

--- a/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
@@ -1256,6 +1256,8 @@ footer.page-footer {
                 transform: translateY(250px);
                 text-align: center;
                 width: 100%;
+                margin: 0 auto;
+                color: $text__color !important; // override PageBuilder
             }
         }
     }
